# statscore

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: cli_example.py  demo.py  file_operations_example.py  fixture_analysis.py  ui_example.py
stats_toolbox/: __init__.py
stats_toolbox/anova/: __init__.py  multiple_tests.py  one_way.py  two_way.py
stats_toolbox/regression/: __init__.py  inference.py  least_squares.py  prediction.py
stats_toolbox/utils/: __init__.py  distributions.py  enums.py  validation.py
statscore/: __init__.py  __main__.py  cli.py  diagnostics.py  io.py  plots.py
statscore/anova/: __init__.py  multiple_tests.py  one_way.py  two_way.py
statscore/app/: __init__.py  _launcher.py
statscore/bayes/: __init__.py  conjugate.py
statscore/cli/: __init__.py  _anova.py  _io.py  _regression.py  _testing.py
statscore/methods/anova/: __init__.py  _results.py  multiple_tests.py  one_way.py  two_way.py
statscore/methods/bayes/: __init__.py  _mcmc_results.py  _results.py  conjugate.py  mcmc.py
statscore/methods/diagnostics/: __init__.py  _results.py
statscore/methods/regression/: __init__.py  _results.py  inference.py  least_squares.py  prediction.py  summary.py
statscore/methods/testing/: __init__.py  _results.py  one_sample.py  two_sample.py
statscore/plots/: __init__.py
statscore/regression/: __init__.py  inference.py  least_squares.py  prediction.py  summary.py
statscore/testing/: __init__.py  one_sample.py  two_sample.py
statscore/utils/: __init__.py  distributions.py  enums.py  plots.py  validation.py
tests/: conftest.py  test_anova_multiple.py  test_anova_one_way.py  test_anova_two_way.py  test_bayes_conjugate.py  test_cli.py  test_diagnostics.py  test_io.py  test_io_fixtures.py  test_plots.py  test_regression.py  test_regression_summary.py  test_testing_one_sample.py  test_testing_two_sample.py
tests/fixtures/: basic.csv  generate_fixtures.py  groups.tsv  measurements.xlsx  records.json  semicolon.csv
