[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statscore"
version = "0.0.2"
description = "A production-quality Python library for ANOVA, Multiple Linear Regression, hypothesis testing, and Bayesian inference with structured output, simultaneous inference, and FWER control."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Furkan K. Yıldırım", email = "contact@furkankyildirim.com" },
]
maintainers = [
    { name = "Furkan K. Yıldırım", email = "contact@furkankyildirim.com" },
]
keywords = [
    "statistics",
    "anova",
    "regression",
    "hypothesis-testing",
    "confidence-intervals",
    "linear-model",
    "f-test",
    "multiple-comparisons",
    "bonferroni",
    "scheffe",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
statscore = "statscore.cli:main"

[project.urls]
Homepage = "https://github.com/furkankyildirim/statscore"
Repository = "https://github.com/furkankyildirim/statscore"
Documentation = "https://github.com/furkankyildirim/statscore#readme"
Issues = "https://github.com/furkankyildirim/statscore/issues"
Changelog = "https://github.com/furkankyildirim/statscore/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["statscore*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
statscore = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",
    "N802",   # function name should be lowercase — intentional math naming
    "N803",   # argument name should be lowercase — intentional math naming
    "N806",   # variable in function should be lowercase — intentional math naming
    "N815",   # mixedCase variable in class scope — intentional math naming
    "E741",   # ambiguous variable name (I, J, K etc.) — standard math notation
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
